
2006-08-01 (REL_0_8) Christian Walter <wolti@sil.at>
 Notes: Added Linux RTU/ASCII port.

 Detailed notes:
   - FEATURES: Added a new Linux RTU/ASCII port. The port should work
       on any linux distribution and it should be possible to run it
       on uCLinux.

2006-06-26 (REL_0_7) Christian Walter <wolti@sil.at>
 Notes: Changed the WIN32 serial port to better fit into the design.
 
 Detailed notes:
   - OTHER: Design of the WIN32 serial port changed. The polling function
       for the serial device are now called from the event loop.
   - OTHER: Debugging uses the same interface as the WIN32/TCP port.

2006-06-25 Christian Walter <wolti@sil.at>

 Notes: Initial work on a Modbus/TCP port is available. The port includes
   an example for a Win32 port which uses the Winsock API.
   
 Detailed notes:
   - FEATURES: added required functions to core protocol stack to support
       a Modbus/TCP implementation.
   - FEATURES: added a Win32 port for the Modbus/TCP core. The port is
       currently limited to one concurrent client.
   - OTHER: The implementation of eMBClose to shutdown the protocol stack
       was changed to unify it with the new Modbus/TCP code. 
   - 

2006-06-18 Christian Walter <wolti@sil.at>

 Detailed notes:
   - OTHER: while working on the Win32 port some linefeeds got
       wrong. Also some source files used tabs instead of spaces.
   - OTHER: prototypes for xMBUtilSetBits and xMBUtilGetBits fixed.
       usNBits should be ucNBits by convention.

2006-06-17 Christian Walter <wolti@sil.at>

 Notes: Fixed various bugs with the Win32 port

 Detailed notes:
   - FEATURES: implement shutdown functionality for protocol stack.
   - FEATURES: protocol stack can be enabled and disabled during runtime.
   - FEATURES: interface functions now do more error checking. For
       example if eMBPool is called in an unitialized state.
   - FEATURES: extended Win32 demo application to use the new features.
   - BUG: fixed bug in Win32 demo for ASCII mode.
