@@ -11,7 +11,7 @@ PROJECT_NAME           = FreeModbus
 # This could be handy for archiving the generated documentation or 
 # if some version control system is used.
 
-PROJECT_NUMBER         = 0.8
+PROJECT_NUMBER         = 0.81
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) 
 # base path where the generated documentation will be put. 
@@ -350,6 +350,7 @@ WARN_LOGFILE           =
 # with spaces.
 
 INPUT                  = ../modbus/include \
+                         ../demo/BARE/port \
                          .
 
 # If the value of the INPUT tag contains directories, you can use the 
@@ -396,7 +397,7 @@ EXAMPLE_PATH           = ../demo/AVR \
                          ../demo/MCF5235 \
                          ../demo/WIN32 \
                          ../demo/WIN32TCP \
-                         ../demo/LINUX
+                         ../demo/LINUX 
 
 # If the value of the EXAMPLE_PATH tag contains directories, you can use the 
 # EXAMPLE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp 
